// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CxNav customize 1`] = `
<div>
  <h3
    class="nav nav-justified nav-pills bazinga"
    role="navigation"
  >
    Test
  </h3>
</div>
`;

exports[`CxNav example 1`] = `
<div>
  <ul
    class="nav"
    role="navigation"
  >
    <li
      class="nav-item"
    >
      <a
        aria-current="page"
        class="nav-link active"
        href="#"
      >
        Active
      </a>
    </li>
    <li
      class="nav-item"
    >
      <a
        class="nav-link"
        href="#"
      >
        Link
      </a>
    </li>
    <li
      class="nav-item"
    >
      <button
        aria-expanded="false"
        aria-haspopup="true"
        class="button primary caret"
        data-react-aria-pressable="true"
        id="react-aria-:r0:"
        tabindex="0"
        type="button"
      >
        A
      </button>
      <div
        aria-hidden="true"
        aria-labelledby="react-aria-:r0:"
        class="menu"
        data-cx-placement="bottom-start"
        id="react-aria-:r1:"
        role="menu"
        style="position: fixed; top: 0px; left: 0px;"
      >
        <a
          class="menu-item"
          href="#"
          role="menuitem"
        >
          B
        </a>
        <a
          class="menu-item"
          href="#"
          role="menuitem"
        >
          C
        </a>
        <a
          class="menu-item"
          href="#"
          role="menuitem"
        >
          D
        </a>
      </div>
    </li>
    <li
      class="nav-item"
    >
      <a
        class="nav-link"
        href="#"
      >
        Link
      </a>
    </li>
    <li
      class="nav-item"
    >
      <a
        aria-disabled="true"
        class="nav-link disabled"
        disabled=""
        href="#"
        tabindex="-1"
      >
        Disabled
      </a>
    </li>
  </ul>
</div>
`;

exports[`loads and displays CxNav component 1`] = `
<div>
  <ul
    class="nav"
    role="navigation"
  >
    Test
  </ul>
</div>
`;
